# ChangeLog for net-wireless/bladerf
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bladerf/ChangeLog,v 1.7 2014/11/03 15:26:43 zerochaos Exp $

  03 Nov 2014; Rick Farina <zerochaos@gentoo.org> bladerf-2014.11_rc3.ebuild:
  fix broken S and adjust deps per upstream

*bladerf-2014.11_rc3 (03 Nov 2014)

  03 Nov 2014; Rick Farina <zerochaos@gentoo.org> +bladerf-2014.11_rc3.ebuild:
  version bump

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> bladerf-2014.09_rc2.ebuild,
  bladerf-9999.ebuild:
  fix version numbers, fix tecla use flag, stub out doc use flag waiting for
  upstream fixes

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> bladerf-2014.09_rc2.ebuild,
  bladerf-9999.ebuild:
  adding appropriate subslot

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> bladerf-2014.09_rc2.ebuild,
  bladerf-9999.ebuild:
  adding ~arm

*bladerf-2014.09_rc2 (25 Jul 2014)

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> +bladerf-2014.09_rc2.ebuild,
  bladerf-9999.ebuild, metadata.xml:
  add tagged version, as well as tecla support and notes for upstream fixes

*bladerf-9999 (25 Jul 2014)

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> +bladerf-9999.ebuild,
  +metadata.xml:
  software to run the bladerf hardware