@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=dev-libs/libusb-1.0.16 tecla? ( dev-libs/libtecla ) virtual/pkgconfig sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Libraries for supporing the BladeRF hardware from Nuand
+EAPI=5
+HOMEPAGE=http://nuand.com/
+IUSE=doc +tecla
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=GPL-2+ LGPL-2.1+
+PDEPEND=>=net-wireless/bladerf-firmware-1.8.0 >=net-wireless/bladerf-fpga-0.1.2
+RDEPEND=>=dev-libs/libusb-1.0.16 tecla? ( dev-libs/libtecla )
+SLOT=0/2015.01_rc2
+SRC_URI=https://github.com/Nuand/bladeRF/archive/2015.01-rc2.tar.gz
+_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	udev	da001465a2e939c93f7ae16947ce3438
+_md5_=f2643bc3f1796fc7180d4f9c2c9cb2fa
