@@ -1,27 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST 2014.11-rc3.tar.gz 1254506 SHA256 d3f173b76800c3576994cab5b009bf419ec8ae086d992fae521647fb5ca83d5a SHA512 480dc6d78edd099a1d59c5e6b85983592f5ab1c8d4f71b19fe592fbfa69d78bb4713d7a2a0be9acc11a56feb1404c0d5565d068a8186e8b1098a26a1f8fecb44 WHIRLPOOL 7b0db3b6a1edec677662ac40ba414c44aacef1c7d737cfc037c1c1c23730eb2152980c73a4ed4d7e0f4fad2cb4b543e2b424d138b46853121f6e1723824318a7
+DIST 2015.01-rc2.tar.gz 1295620 SHA256 759105ba8ec4054bc8f7e7d45ed96bdd66a2eca92a86cbdf753f6cefff4fc261 SHA512 44d2a0e32c21e00b0295c97c17fa945e5dd19705cf158d7816c1e052043b94125abe740c875119ccf78206ac16c9d85a6d22ce9ba87ba3a632e26f84b6cebe30 WHIRLPOOL a89c6da982f534ee4d84caa53a2a666990534392ff515d4d64b0e4ef7f447369835b4bbefab94e5f89eaed3ff3ce38169685fa63d23568dd3653336386b1fde3
 DIST bladeRF-2014.09-rc2.tar.gz 1184588 SHA256 454ebd06e8e336b471534d15abf92f8a6158a679c855c4c63665f9ce5733fe36 SHA512 6a39fdb0b11e36434b544ce77ef13f0c4903fafc02749f7f65d329d3f159923278bd05c98a867dc566eb95d08080a87461183be9384db395ada8cbe1a3465476 WHIRLPOOL fe6ac48f754d15c341047d0b1709c8db75a5a3534ee8ce3746d80a3232942b1f12896b7dff272ffc3f336d5a091492aa00a465f9729f5d807aa178b3ea00412c
 EBUILD bladerf-2014.09_rc2.ebuild 1460 SHA256 c2031752c457160e2d0755e416813bcddd69e0802c246e03d8966088e3a26cbc SHA512 393355f6cea9e28df265e3877911bb5e4a0d310ebeff0a102870a372e07bf504d173f4442862aa19a6e1ec011db5603e08ed353a32dbfba996d4d812f9c7493c WHIRLPOOL ebfcf03f3f4e01a9f4e1c803af4879986e3fccedae208108bd9a7d311801b8967bb878ac53ff8a9213943dea70ff0413d2c733aff851e67aafacc523acedc756
 EBUILD bladerf-2014.11_rc3.ebuild 1442 SHA256 d42b7fef3f2cc03fe93232377c50997bb4fb8969ee7c5838ae1218d9606f091a SHA512 7467414ec030ee308b7f6f9c2d04a121d81d7ab6b8b78022d8d8936bb1832f2e911cdaf551f93c70c667bb7e50ca55a4af5637edb9d1cd7f8d34f483eaa4ca59 WHIRLPOOL 9a8a98450dccec5c8486804296369705e2ee2a58ee81705979f77dc8ea34028aaf7ff360403c2fe9e1da5425d2a60d5d8bc0acbf974630b8d865e652defb6e50
+EBUILD bladerf-2015.01_rc2.ebuild 1442 SHA256 b1fc0550bbf136b44ee76f2d4361fe0437e22c3e4daa6e737ef5edec162f9a75 SHA512 627ad0a7dab331db308d274734ffd67a5da467d26480acc674248a50badbe5d07d82981987c8ce370a509b5b0b21705f124b8411f8cade4e1254a45774f590ee WHIRLPOOL ac76fdcf64f1c65aadaf9be97111f25dbce40d6eec4f1c9aab3aa9c806a223bd645cbc5639614dec4f1914b7a2dd5f05c8f6ac771e663421c64468cf0e14b143
 EBUILD bladerf-9999.ebuild 1453 SHA256 5f2083ee489305a5b24ae1a09044448115b784d38dfa5cc0da2b03e8f5f8b363 SHA512 ce0cbacee8c6615f621d20c5622d48c02b39027c621e83eb3ac4fc5ca915d16c5b7824b17a054d1cb2f2b6c855ae3f433a2d845fef854f1fee7db1d98b426c23 WHIRLPOOL 8bb2a73053c94be8099442587abdbcf31d7bbd4db43ac9976576da02c8b3835e992ae72a1f2d76f92eb3f88568fbf2eda5964842a9931d4ff0f7e8ddf80071f0
-MISC ChangeLog 1299 SHA256 108979ae8fbc6a97093411957d48c5fb074396cb7ff68f64090af3aa2458f8c6 SHA512 27e3cd5aa9bd6139b3eb9f7b765b1307a92057ceb8159437892d1bcd5416a80015f390bcbe262a7dbdef10c386c85c791e0a2f0945357a548e0845be84406821 WHIRLPOOL d5b3648616553fc44d5bcf8593b858b2e1c67a2bbad549fbdfc969957e5bd5a890b6803cd038478f16a2f7e9d334a260ca8af360783ab51649639f7978d16bae
+MISC ChangeLog 1430 SHA256 4bd3b1c23e4e45e80efca755e3752231970c03d85b572889b0127daf179218f1 SHA512 db6bdaa1888fa5bb174bf71c2c04ed7ea292983a6ad687aeb28b8ad7bfc2b2bcaccd3c69f2931bfe75f0f6ae26d324bb08285f6e1458dedee8d6847094f1aacf WHIRLPOOL f0aebfc5905e2c24ffa5612635e72014f47d970b07ad84bbbe1d6f6d6cec600421af44139e110b3413b174ca654a307dd27184862a230b2dc43c6cd77b1dae9b
 MISC metadata.xml 399 SHA256 bbd9eb581bf907edb9091c968d0de11c10801631177c275e56baf554538bb86d SHA512 0d6263bb098e4225371b53ddc242bb81cb5002ca07c07d6a820e0099b5f77e62ddf4d1b0b2a35b8ba9b5bd9e9151c3783b1d12a3ce24ebd5d12fb0ed2a9fe469 WHIRLPOOL 0b72d027c4440fda5c9d89722e8d430f61090b170f7ef82df39824c40d88cb446430dbe0143c128cd6000bd9675847b37fd13451ad47e91b760ed2f583949cc7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCgAGBQJUV59bAAoJEKXdFCfdEflKe6IP+gNu/p+cY4WvANDtx0uPLOOG
-GylTuBHKhQkCQhW6KW7NneOf3kKLVGePakAlpjlcUNBI4t5qoQDRhySZvRmQktqh
-HkjuBggp0lXBM46DiCp4nRGDrRK3gT1dJITJJlpxuh2URRXHjCcL1Fj/Anig8+pY
-XjZjUi92bWV9XnYGjCt69SD/junnM8/Daov3nW9c354wK2a4NzafMueHi3/0Lmbt
-KT0GNhr8GPcm9QIVNXi+nTNqSUfAFZ3kgp7c5BmLq+DK8NyNFWk/ESGpWP0eVLP9
-SxPUcTEAvLTlVwM9+3VDEYvv9XZabEmRiCFAq/otb8cx8yLz7g9BEXRzTGLpx3qr
-MugC5Uk/n94D1R3XBn/T3JFTPCeOR95e4uxpetg7LkfyjbamnkKiFiDWkJ02pNk9
-WeMRYz/ScHLEp+ktz8cvk1T12Y55Y6PLwYJZfMfLTY8BLRI27hnFaAT5Jcixjs8q
-XfFzSeXqXiK9u4NLTVkvuDLmyqJ1dUWtFBXllprV5CnGXuuim38sEPUAUnYQtD+f
-v92g1/LwF/+OV9kfVqGFp9/ujR9qkfuXygbsgjjpZbZle+iildFw+dbmC2l9DZ6m
-gB57pjs7T7c9uHK6esgxDjifhe3F0jJjO7A7NssTSIB/XFqz9ujrXAg8aFpV69Tu
-b+QTb2jtt/ZvrVWpS0n5
-=fex5
+iQIcBAEBCAAGBQJU2kSzAAoJEKXdFCfdEflKStwP/igRVA4us4J2gG5MWiBCJUb8
+g2WAavI/W3EGWc7+KlUKDQfIc8Ry4/2cf6antxo1gOUV9OHGei4ufhiwaDQFMAmh
+Ej148p0O0qRkM/LKf3TaWJjyWEm8oP8f6EyyCxSPWzPqWhllTj4PyL8ul5A7K1pc
+qCGw0czp6gpYRRIkioJiJEYlGdsXPpthrGFk+foEcXytTHxgq/B3iiST7+JUgAz5
+vNF3AQmTfqJqcGmqpFBC1J08H3oYT0Kvkc98WTW8rBtpuE6+W/ttU1amUi2FFmb0
+GOSjBS/CYKB3dGEFXC3quWv7UDWjldP0hU14yd+x6pscAgNf1z0hypUDTBwAPuKF
+v9mx8G9C3+sLFlPGRyuZdqCYUIq8qL6kM1i17btVmhQ/5mm+PRmL9ofZUVhWQ3zR
+poCgEW72buNWfhjz1n58ldFjaEMnQmmDdcxep2UHFWJ7XHxUzks5MX6sdnWuUD0b
+eQ0qr7I2+TeIzPXPoCUKsYrw5RuZHIAhPOS25tpQzg4XZIPHiED3/xla1vNLGvT4
+TdDFPgLnRWIwjWLGFq227sGaP+htuAjJYEMNP6b5GAu8+DGGAJEmnGgcvNgW0TTm
+JiWvjExXOsBHcDzNTeGwtxg8K6XtOb1PqpzLx6lD34cg1FJAQ3h/M1QbNxrGyoa5
+ZnJlKPjowp9/0xzmdEP1
+=c0TR
 -----END PGP SIGNATURE-----
